test/typecheck/bad-expr-if.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func (result i32)
    i32.const 1
    i32.const 2
    if 
      i32.const 3
      drop
    end
    i32.add))
(;; STDERR ;;;
out/test/typecheck/bad-expr-if.txt:11:5: error: type mismatch in i32.add, expected [i32, i32] but got [i32]
    i32.add))
    ^^^^^^^
;;; STDERR ;;)
